2003-05-02  Peter Stephenson  <pws@csr.com>

	* 18497: README, Etc/NEWS, Fuctions/TCP/tcp_spam: Tweak
	info for 4.1.1; tcp_spam used incorrect syntax when verbose.

	* 18492: Doc/Zsh/expn.yo, Doc/Zsh/redirect.yo, Src/exec.c,
	Src/jobs.c, Src/signals.c, Src/utils.c, Src/zsh.h,
	Test/A04redirect.ztst, Test/D03procsubst.ztst:  Work around long
	standing problem that multios and output process substitutions
	run asynchronously.  Remember processes and wait for them.
	Unfortunately this only works when run from a builtin as otherwise
	the processes are forked in a subshell which execs the main
	command.  Document use of { ... } as workaround.

	* 18496: Etc/MACHINES: Paul Ackersviller reports the curses
	problem has gone on HP-UX 11 but --disable-dynamic is needed
	for use with Softbench.

2003-04-30  Oliver Kiddle  <opk@zsh.org>

	* 18486: Completion/Base/Utility/_describe: back-out 18458
	because it causes problems when completing only options

2003-04-28  Peter Stephenson  <pws@csr.com>

	* 17820 (tweaked): Andrej: Src/Modules/tcp.h: unconfirmed but
	apparently safe attempt to get recent Cygwin versions to include
	<netinet/in_systm.h> where available.

2003-04-25  Oliver Kiddle  <opk@zsh.org>

	* Haakon Riiser: 18473: Completion/X/Command/_acroread,
	Completion/Unix/Type/_pdf: new completion for Acrobat Reader 5.0.x

	* 18472: zshconfig.ac, Completion/Base/Core/_wanted,
	Completion/Linux/Command/_uml, Completion/Mandrake/Command/_urpmi,
	Completion/Unix/Command/_figlet, Completion/Unix/Command/_grep,
	Completion/Unix/Command/_larch, Completion/Unix/Command/_ls,
	Completion/Unix/Command/_perforce, Completion/Unix/Command/_sccs,
	Completion/Unix/Command/_texinfo, Completion/Unix/Type/_java_class,
	Completion/Zsh/Command/_zmv, Doc/zshtcpsys.yo, Doc/Zsh/compsys.yo,
	Doc/Zsh/mod_tcp.yo, Doc/Zsh/mod_zselect.yo, Doc/Zsh/tcpsys.yo,
	Doc/Zsh/zle.yo, Functions/Misc/relative, Functions/TCP/tcp_alias,
	Functions/TCP/tcp_close, Functions/TCP/tcp_read,