@@ -1,3 +1,9 @@
+2003-05-05  Andrey Borzenkov  <bor@zsh.org>
+
+	* 18476: Src/Zle/complist.c, Src/Zle/zle_refresh.c: fix
+	menu selection on terminals without cursor_down or with
+	cursor_down set to ^J (Linux console)
+
 2003-05-02  Peter Stephenson  <pws@csr.com>
 
 	* 18497: README, Etc/NEWS, Fuctions/TCP/tcp_spam: Tweak
